--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports News & Stats</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -29,7 +29,6 @@
             <h3>New Record Set by Player X</h3>
             <p>Player X has just broken the all-time record for...</p>
         </div>
-        <!-- More news items -->
     </section>
 
     <section id="stats">
@@ -47,7 +46,6 @@
                 <td>5</td>
                 <td>25</td>
             </tr>
-            <!-- More teams -->
         </table>
     </section>
 
@@ -56,7 +54,6 @@
         <ul>
             <li>Game 1 - Date: 20th March, Time: 5 PM</li>
             <li>Game 2 - Date: 22nd March, Time: 7 PM</li>
-            <!-- More games -->
         </ul>
     </section>
 
@@ -65,4 +62,3 @@
     </footer>
 </body>
 </html>
-
