--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports News & Stats</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#stats">Stats</a></li>
-                <li><a href="#schedule">Schedule</a></li>
-                <li><a href="#news">News</a></li>
+                <li><a href="#home">🏠 Home</a></li>
+                <li><a href="#stats">📊 Stats</a></li>
+                <li><a href="#schedule">🗓️ Schedule</a></li>
+                <li><a href="#news">📰 News</a></li>
             </ul>
         </nav>
     </header>
@@ -62,3 +64,4 @@
     </footer>
 </body>
 </html>
+
